完善RunLoop的知识点学习

--- a/读书笔记/爬山日志/2020QQ音乐（卒）.md
+++ b/读书笔记/爬山日志/2020QQ音乐（卒）.md
@@ -115,17 +115,89 @@ mach异常则会发出Unix标准的Signal信号。所以可以通过注册Signal
 
 #### 其他看到的关系卡顿和Crash相关的面试问题
 * 用户报卡顿，有哪些情况，该如何定位问题？
+
 * 卡顿检测有哪些方案？如果要监控每个函数的耗时如何实现？页面停留时间的检测该如何实现？
+
 * 页面直接卡死，导致无法获取FPS，怎么解决这个问题？
+
 * 为什么有时候FPS很高，但还是感觉卡顿？
+
 * 获取FPS后，怎么定位到具体函数？
+
 * 怎么做图片、数组、字符串的无差别存储，key怎么确定，怎么删除数据。如何保证取出的数据顺序？
+
 * 常见的Crash有哪些？如何对这些Crash堆栈进行收集？如何捕获Crash？
+
 * 捕获的堆栈如何进行符号还原呢？UUID是什么？怎么获取？
+UUID 是通用设备唯一标识符，它保证了设备在全世界的唯一性。通过崩溃日志的UUID和dysm文件的UUID比较来获取对应设备的堆栈日志。
 * dysm文件是什么，有什么作用？
+
+  Dysm文件是保存函数地址映射信息的中转文件，它里边包含着函数与符合地址的映射，可以用它来做符号还原。
+
 * 如果你的项目中既有Bugly的Crash监控系统，又有自己的监控系统，可能存在什么问题？怎么解决？
+
+  可能导致Crash监控出现冲突的问题，解决方案就是在使用自己的监控系统的时候先判断是否有其他的监控，如果有的话，先用一个全局变量保存下来，等自己的监控系统处理完，再把异常抛出去。
+```
+//Mach-O signal异常
+typedef void (*SignalHandler)(int signo, siginfo_t *info, void *context);
+//用于保存就的监控Handler
+static SignalHandler previousSignalHandler = NULL;
++ (void)installSignalHandler {
+    struct sigaction old_action;
+    //判断是否已有监控
+    sigaction(SIGABRT, NULL, &old_action);
+    if (old_action.sa_flags & SA_SIGINFO) {
+		//有的话进行保存
+        previousSignalHandler = old_action.sa_sigaction;
+    }
+	//处理自己的监控
+    LDAPMSignalRegister(SIGABRT);
+	.......
+}
+static void LDAPMSignalRegister(int signal) {
+    struct sigaction action;
+    action.sa_sigaction = LDAPMSignalHandler;
+    action.sa_flags = SA_NODEFER | SA_SIGINFO;
+    sigemptyset(&action.sa_mask);
+    sigaction(signal, &action, 0);
+}
+static void LDAPMSignalHandler(int signal, siginfo_t* info, void* context) {
+    //  获取堆栈，收集堆栈
+    ........
+
+    LDAPMClearSignalRigister();
+    // 处理前者注册的 handler
+    if (previousSignalHandler) {
+        previousSignalHandler(signal, info, context);
+    }
+}
+```
+```
+//OC 异常
+static NSUncaughtExceptionHandler *previousUncaughtExceptionHandler;
+static void LDAPMUncaughtExceptionHandler(NSException *exception) {
+    // 获取堆栈，收集堆栈
+    // ......
+    //  处理前者注册的 handler
+    if (previousUncaughtExceptionHandler) {
+        previousUncaughtExceptionHandler(exception);
+    }
+}
+
++ (void)installExceptionHandler {
+    previousUncaughtExceptionHandler = NSGetUncaughtExceptionHandler();
+    NSSetUncaughtExceptionHandler(&LDAPMUncaughtExceptionHandler);
+}
+```
+
 * 针对无堆栈的Crash，比如out of memory有什么定位思路？
+
+  主要是内存被爆、后台任务被杀、Watch Dog被杀导致的Crash无法获取。只能使用一些特殊的阈值来评估释放可能产生Crash。
+
 * 常见的野指针问题有哪些？
+
+  比如使用assign修饰对象。block回调方法里使用已经dealloc掉的对象。
+
 * dyld是什么？动态链接和静态链接的区别？dyld是什么时候执行的？dyld如何把对应dylib中函数实现链接到另一个库中的？
 
 
