--- a/读书笔记/iOS高级笔记/知识小集01.md
+++ b/读书笔记/iOS高级笔记/知识小集01.md
@@ -626,6 +626,49 @@ crash崩溃堆栈分析(略)
 [iOS crash日志堆栈解析](<https://juejin.im/post/5adf15f2518825671775f3e1>)
 [iOS崩溃异常捕获](<https://juejin.im/post/5a93c9385188257a7b5aba42>
 
+#### Core Text 
+上述异步绘制中设计到CoreText，所以这里简单介绍一下：
+三个类：CTFrameRef: 画布；CTLineRef: 每一行；CTRunRef:每一小段。
+每个画布(CTFrameRef)可以包含多行(CTLineRef)，每一行可以包含多个小段(CTRunRef)。
+绘制步骤：
+首先一般的绘制都是异步绘制，所以基本是在display函数或者drawRect函数中。因为这样才能拿到context
+```
+	//
+	CGContextRef context = UIGraphicsGetCurrentContext();
+    //变换坐标
+    CGContextSetTextMatrix(context, CGAffineTransformIdentity);
+    CGContextTranslateCTM(context, 0, self.bounds.size.height);
+    CGContextScaleCTM(context, 1.0, -1.0);
+    //设置绘制的路径
+    CGMutablePathRef path = CGPathCreateMutable();
+    CGPathAddRect(path, NULL, self.bounds);
+	/创建属性字符串
+    NSMutableAttributedString * attStr = [[NSMutableAttributedString alloc] initWithString:str4];
+
+    //颜色
+    [attStr addAttribute:(__bridge NSString *)kCTForegroundColorAttributeName value:(__bridge id)[UIColor redColor].CGColor range:NSMakeRange(5, 10)];
+
+    //字体
+    UIFont * font = [UIFont systemFontOfSize:25];
+    CTFontRef fontRef = CTFontCreateWithName((__bridge CFStringRef)font.fontName, 25, NULL);
+    [attStr addAttribute:(__bridge NSString *)kCTFontAttributeName value:(__bridge id)fontRef range:NSMakeRange(20, 10)];
+
+    //空心字
+    [attStr addAttribute:(__bridge NSString *)kCTStrokeWidthAttributeName value:@(3) range:NSMakeRange(36, 5)];
+    [attStr addAttribute:(__bridge NSString *)kCTStrokeColorAttributeName value:(__bridge id)[UIColor blueColor].CGColor range:NSMakeRange(37, 10)];
+
+    //下划线
+    [attStr addAttribute:(__bridge NSString *)kCTUnderlineStyleAttributeName value:@(kCTUnderlineStyleSingle | kCTUnderlinePatternDot) range:NSMakeRange(45, 15)];
+
+    CTFramesetterRef framesetter = CTFramesetterCreateWithAttributedString((CFAttributedStringRef)attStr);
+    CTFrameRef frame = CTFramesetterCreateFrame(framesetter, CFRangeMake(0, attStr.length), path, NULL);
+
+    //绘制内容
+    CTFrameDraw(frame, context);
+```
+[Core Text编程指南](https://juejin.im/post/5c5154e9e51d4503834dabf4)
+
+
 
 
 ### 启动优化
@@ -655,8 +698,36 @@ APP启动主要分为三个阶段：main函数之前、main函数之后、首屏
 
 
 ### 播放器 与 音视频相关
+#### 基础类
+* NSURL 支持 本地文件url 和 网络的url
+* AVPlayerItem 通过 URL 初始化的一个播放对象（状态获取）
+* AVPlayer 通过 AVPlayerItem 初始化的播放控制器（控制）
+* AVPlayerLayer 通过 AVPlayer初始化的一个播放展示视图（展示）
 
-通过kvo的方式监听"Status"和"loadedTimeranges"来分别监听播放状态和缓存时长。
+#### AVPlayerItem的各种需要监听的状态
+* 通过监听“status”字段来监听播放状态，主要存在三种状态：.unknown、.readyToPlay、.failed。如果是.readyToPlay状态，则可以获得播放时长、视频大小、视频首帧等信息；
+* 通过监听"loadedTimeRanges"字段来监听缓冲大小；
+* 通过监听"playbackBufferEmpty"字段表示缓冲区空了，需要加载；
+* 通过监听"playbackLikelyToKeepUp"来表示缓冲区满了。
+
+##### 视频首帧获取
+```
+// 获取视频第一帧
+-(UIImage*)getVideoPreView{
+    AVAssetImageGenerator *assetGen = [[AVAssetImageGenerator alloc] initWithAsset:self.playerItem.asset];
+    assetGen.appliesPreferredTrackTransform = YES;
+    CMTime time = CMTimeMakeWithSeconds(0.0, 600);
+    NSError *error = nil;
+    CMTime actualTime;
+    CGImageRef image = [assetGen copyCGImageAtTime:time actualTime:&actualTime error:&error];
+    UIImage *videoImage = [[UIImage alloc] initWithCGImage:image];
+    CGImageRelease(image);
+    return videoImage;
+}
+```
+
+
+
 
 https://juejin.im/post/5da1a30de51d457825210a8c
 
@@ -749,6 +820,31 @@ https://www.jianshu.com/p/b3c209f6a709
 
 
 
+
+### IM
+* IM中信息的可靠性传输：消息不丢失、消息不重复；
+  首先我们大概看一下消息的发送流程：
+  * 步骤1：用户A发送信息到达IM服务器；
+  * 步骤2：服务器进行消息暂存；
+  * 步骤3：暂存成功后，将成功的消息返回给A；
+  * 步骤4：返回确认消息的同时将消息推送给用户B；
+  这些步骤中1~3步任一失败的话，用户A会被提示发送失败。后面步骤中，可能出现消息未能推送给B导致失败，也可能出现B写入本地数据库失败导致消息丢失。
+  解决方案：
+  基本原理就是：ACK确认机制+消息重传+消息完整性校验，来解决消息丢失的问题。
+  ACK确认机制就是TCP的ACK确认回复，在三次握手、四次挥手中都有使用到。首先TCP报文字节都是有数据序列号的。ACK报文每次回复确认都会带上序列号，告诉发送方接收到了哪些数据，所以这也保证了消息的有序性。然后如果ACK确认报文丢失，那么可能是发送数据丢失位到底IM服务器，也可能是到底了服务器，但是返回的确认报文丢失了。无论是这两种的那种情况，TCP都可以使用超时重传的策略解决，只是如果是ACK确认丢失了，则服务器会先忽略掉新的数据，然后发送ACK应答。其次IM业务层也基本参考了ACK确认机制和超时重传机制。比如推送消息给B时，会携带一个标识，然后将退出去的消息添加到“待ACK确认消息队列”，用户B收到消息后会回复一条ACK包，然后服务器把消息从待确认队列中删除。否则进行重新推送。之所以要加业务层的ACK确认机制，是因为TCP只能保证传输层的消息是否到底，但是业务层可能到底之后还需要进行处理，比如说存入本地数据库。
+  消息完整性校验：则是可以通过每一条消息带上时间戳的形式，然后每次重连后对比时间戳，则可以知道大概哪些消息没有到达，然后将待确认队列的时间戳之后的数据都按序发送一遍。
+  如何确保消息不重复？
+  同样是给每个消息带上一个ID，接收方接到消息后，先进行业务去重，然后才考虑是否使用这个消息。
+
+* IM数据库如何设计表
+	* 会话表：用于存储所有会话。
+	* 聊天详情表：主要用于存储消息
+	* 群组表：存储每个群组相关数据
+	* 群组信息表：用于关联群组表和群成员表
+	* 群成员表：存储群成员信息
+	* 联系人表：存储所有联系人。
+
+
 ### 单元测试与可持续集成
 
 <https://juejin.im/post/5a3090f2f265da4310485d01>
@@ -778,6 +874,7 @@ https://www.jianshu.com/p/b3c209f6a709
 ##### 二叉树:
 前序、中序、后序遍历指的是根节点的位置。
 中序：
+
 ```OC
 //中序，使用栈
 -(void)sourt1:(Node *)root{
