--- a/读书笔记/爬山日志/2020QQ音乐（卒）.md
+++ b/读书笔记/爬山日志/2020QQ音乐（卒）.md
@@ -166,7 +166,6 @@ mach异常则会发出Unix标准的Signal信号。所以可以通过注册Signal
 * DNS解析检测
 * 启动时间检测
 
-
 想要处理列表等流程度，是肯定摆脱不了YYKit和AsyncDisplayKit这两个库的
 [iOS保持界面流程的技巧](https://blog.ibireme.com/2015/11/12/smooth_user_interfaces_for_ios/)
 [AsyncDisplayKit详解](https://zhuanlan.zhihu.com/p/25371361)
@@ -174,3 +173,10 @@ mach异常则会发出Unix标准的Signal信号。所以可以通过注册Signal
 //
 [了解和分享Crash Report](https://juejin.im/post/5c5edb37e51d457f926d2290)
 [iOS Crash日志堆栈解析](https://juejin.im/post/5adf15f2518825671775f3e1)
+
+
+
+
+
+[iOS CALayer及UI显示原理与优化](<https://luochenxun.com/ios-0directory/>)
+
