--- a/读书笔记/爬山日志/2020QQ音乐（卒）.md
+++ b/读书笔记/爬山日志/2020QQ音乐（卒）.md
@@ -70,7 +70,7 @@
 
 * 纹理的渲染：实际就是指图片的渲染。iOS中几乎所有的UI视图最终都是绘制成Bitmap，包括文本、图片、栅格化的内容。所以可以尽量减少短时间内大量图片的显示，尽可能将多张图片合成到一张图片中。其次对于过大的图片，比如超过GPU的最大纹理尺寸（4096*4096）,则需要CPU先预处理。所以尽量不要让图片大小超过这个值。
 
-* 视图混合：多个视图重叠时，GPU，所以应该尽量减少视图数量与层次。不透明的视图表面opaque属性，避免无用的Alpha通道合成。
+* 视图混合：多个视图重叠时，GPU，所以应该尽量减少视图数量与层次。不透明的视图表明opaque属性，避免无用的Alpha通道合成。
 
 * 避免离屏渲染。
 
