--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -202,7 +202,7 @@ CFRunLoopRef 里包含一个pthread、一个currentMode、一个modes、一个co
 
   * 五种mode的区别：DefaultMode是APP默认的mode，通常主线程是在这个mode下运行；TrackingMode是UIScrollView的滑动mode；UIInitializationMode是app启动时的mode，启动完成后就不再使用；EventReceiveMode系统内部接收事件的mode，通常用不到；CommonMode则实际上不是一种模式，而是一种mode的组合方式。一个RunLoop包含多个Mode、每个Mode又包含多个Timer、Observer、Source；
 
-  * commonMode是一种技术解决方案。RunLoop启动时只能指定一个Mode作为当前的currentMode，如果要切换Mode，只能先退出当前Mode，重新选择一个Mode进入。所以为了解决一个RunLoop只能有一个Mode的情况，产生CommonMode的技术解决方案。一个mode一旦被标记为common属性的话，当runloop的内容发送变化时，runloop会将commonModeItems中的Observer、timer、source同步到具有Common属性的mode中。这样就可以让一些事件可以同时在多个mode中工作，比如NSTimer。
+  * commonMode是一种技术解决方案。RunLoop启动时只能指定一个Mode作为当前的currentMode，如果要切换Mode，只能先退出当前Mode，重新选择一个Mode进入。所以为了解决一个RunLoop只能有一个Mode的情况，产生CommonMode的技术解决方案。一个mode一旦被标记为common属性的话，则该mode的名字就会被放到commonMode集合中，当runloop的mode发送变化时，runloop会将commonModeItems中的Observer、timer、source同步到具有Common属性的mode中。这样就可以让一些事件可以同时在多个mode中工作，比如NSTimer。
 
   * 4种Mode Item：Observer、timer、source0、source1：Oberver主要是用来观察RunLoop自身的6大状态，Timer实际就是我们用的NSTimer，也就是说NSTimer是根据RunLoop的Timer事件实现的，所以它是不准的。source0用于接收用户事件，比如UIEvent。source1事件是系统内核使用的，它可以主动唤起线程。
 
