--- a/读书笔记/iOS高级笔记/知识小集01.md
+++ b/读书笔记/iOS高级笔记/知识小集01.md
@@ -109,6 +109,14 @@ UIViewController *vc = [[Router sharedInstance] openURL:@"myapp://good/detail"]
 [组件间通信](https://juejin.im/entry/5baaf45cf265da0afb334b25)
 [组件化及其通讯方案](https://juejin.im/entry/5baaf45cf265da0afb334b25)
 
+
+
+#### 实践
+#### 如何实现一个图片缓存模块
+#### 如何实现一个使用时长统计模块
+
+
+
 ### 图片与SDWebImage
 #### 图片 内存、解码相关：
 ##### 图片加载
@@ -197,12 +205,9 @@ iOS 10之后，UITableView和CollectionView都提供了一个预加载的接口:
 
 [image/io](<https://zhuanlan.zhihu.com/p/30591648>)
 
-
-
 [图片渲染相关](<https://lision.me/ios-rendering-process/>)
 
 [ios绘制](<https://segmentfault.com/a/1190000000390012>)
-
 
 
 
@@ -225,7 +230,7 @@ iOS 10之后，UITableView和CollectionView都提供了一个预加载的接口:
 [周小可—SDWebImage源码解析](<https://hnxczk.github.io/blog/articles/sd.html#sdwebimagecache>)
 
 ##### 注意的细节与常考点，与上述流程对应
-* 第1步中：会先取消当前正在进行加载的Operation，设置placeholder。然后根据URL开启下载。整个库中的key值默认使用图片URL，比如缓存、下载操作等。URL中可能会含有一部分动态变化的部分（比如获取权限的部分），所以我们可以取url不变的值scheme、host、path作为key值；
+* 第1步中：会先设置placeholder。然后根据URL开启下载。整个库中的key值默认使用图片URL，比如缓存、下载操作等。URL中可能会含有一部分动态变化的部分（比如获取权限的部分），所以我们可以取url不变的值scheme、host、path作为key值；
 * 第2、3步中：首先会判断是否只使用了内存查找，如果是的话，则不进行磁盘查找，也不将查找的图片存到磁盘；否的话会先生成一个NSOperation赋值给SDWebImageCombinedOperation的cacheOperation，用于cancel。然后会封装一个block来执行磁盘查找，block根据设置来确实是同步还是异步查找，如果是异步查找的话，会放到一个串行的IO队列中。在查找期间会先判断Operation是否取消，如果已经取消则不进行查找。查找的过程中会创建一个@autoreleasePool用来及时释放内存；如果在磁盘中找到了data，那么会将data解码成Image,并同时存一份到内存中，如果内存空间过小，则会先清一波内存缓存；
 * 第4步中：1、每张图片的下载是由自定义的NSOperation的子类进行的，它实现了start方法。start方法中创建了一个NSURLSession开启下载，使用了RunLoop来确保从start到结果响应期间不会被干掉，如果运行后台下载的话，也是在这里进行处理的。2、Operation被放到一个NSOperationQueue中并发执行，队列中的最大并发量是6；DownloadQueue使用了信号量来确保线程安全；3、每个Operation、结果回调block、进度block都是包装存储到一个URLCallBack中的，它以url为key值缓存在一个NSMutableDictionary的字典中，以便cancel及其他操作。但是因为可能存在多个操作同时进行的情况，所以这里就使用了dispatch_barrier来确保NSMutableDictionary的线程安全；4、下载过程中，如果返回了304 not Modified，则表示客户端是有缓存的，则可以直接cancel掉Operation，返回回调返回缓存的image。
 * 第5步：下载完成后，会在URLSessionTaskDelegate的回调方法里使用一个串行队列异步进对下载图片进行解码。解压完成后，如果是JPEG这种可压缩格式的图片则会按照设置进行压缩后再返回。如果有缩略设置，也会对图片进行缩放等；
@@ -242,8 +247,7 @@ iOS 10之后，UITableView和CollectionView都提供了一个预加载的接口:
 
   * 后台下载：使用`-[UIApplication beginBackgroundTaskWithExpirationHandler:]` 方法使 app 退到后台时还能继续执行任务, 不再执行后台任务时，需要调用 `-[UIApplication endBackgroundTask:]` 方法标记后台任务结束
 
-
-  * 框架中使用最大的锁是dispatch_semaphore_t，其次是@synchronized互斥锁；
+  * 框架中使用最多的锁是dispatch_semaphore_t，其次是@synchronized互斥锁；
 
 
 
