--- a/读书笔记/iOS高级笔记/知识小集01.md
+++ b/读书笔记/iOS高级笔记/知识小集01.md
@@ -187,7 +187,7 @@ iOS 10之后，UITableView和CollectionView都提供了一个预加载的接口:
 * 1、从网络下载图片源数据，默认放入内存和磁盘缓存中；
 * 2、异步解码，解码后的数据放入内存缓存中；
 * 3、回调主线程渲染图片；
-* 4、内部维护磁盘和内存的cache，支持设置定时过期清理，设置内存cache的上限等
+* 4、内部维护磁盘和内存的cache，支持设置定时过期清理，设置内存cache的上限等，对不同的图片设置不同的缓存大小。比如常用的0~100kb的图片设置100张，100~500kb设置50张，500~1m设置10张，超过1m不进行内存缓存。
 ##### 加载图片流程简化：
 * 1、从内存中查找数据，如果有，并且已经解码，直接返回数据，如果没有解码，异步解码缓存内存后返回；
 * 2、内存中未查找到图片数据，从磁盘查找，磁盘查找到后，加载图片源数据到内存，异步解码缓存内存后返回，如果没有去网络下载图片，走上面的流程；
@@ -254,473 +254,6 @@ iOS 10之后，UITableView和CollectionView都提供了一个预加载的接口:
 [SDWebImage相关面试题](http://cloverkim.com/SDWebImage-interview-question.html)
 
 [SDWebImage源码阅读笔记](https://www.jianshu.com/p/06f0265c22eb)
-
-### Crash 及 APP 性能监控相关
-面试常考题：介绍你碰到过的印象较深刻的外网crash，并介绍发现、定位、解决的过程。
-#### Crash相关
-##### 常见的Crash及处理
-
-- 找不到方法：unrecognized selector sent to instance：
-  eg：比如说未实现的代理方法；对可变集合使用了copy后，对其进行修改操作。
-  解决方案：给NSObject写个分类，截获这种未实现的方法：
-
-  ```
-  - (NSMethodSignature *)methodSignatureForSelector:(SEL)aSelector 	{
-  	if ([self respondsToSelector:aSelector]) {
-  	//已经实现不做处理
-  		return [self methodSignatureForSelector:aSelector];
-    	}
-  	return [NSMethodSignature signatureWithObjCTypes:"v@:"];
-  }
-  - (void)forwardInvocation:(NSInvocation *)anInvocation {
-  	NSLog(@"在 %@ 类中, 调用了没有实现的实例方法: %@ ",NSStringFromClass([self class]),NSStringFromSelector(anInvocation.selector));
-  }
-  ```
-
-  其次，尽量少使用performselector这种API；
-
-- KCV造成的Crash ：
-  eg:给NSObject添加KVC；key为nil；key不存在。一句话：**给不存在的key（包括nil）设置value**；
-  解决方案：重写类的setValue:forUndinedKey:和valueForUndefinedKey:
-
-  ```
-  -(void)setValue:(id)value forUndefinedKey:(NSString *)key{
-  	NSLog(@"在 %@ 类中给不存在的key设置value",NSStringFromClass([self class]));
-  }
-  -(id)valueForUndefinedKey:(NSString *)key{
-  	return nil;
-  }
-  ```
-
-- EXC_BAD_ACCESS:
-  eg:使用没有实现的block；对象未初始化；访问野指针(比如assign、unsafe_unretained修饰对象类型，关联属性修饰使用不对)；地址越界；
-  解决方案：这类对象大多数是由于操作不当导致的，所以可以利用xcode的一些工具
-
-  - 1、使用XCode，在Debug模式下开启僵尸模式，Release时关闭；
-  - 2、使用XCode的Address Sanitizer检查地址访问越界；
-  - 3、对象属性修改方式要使用正确；
-  - 4、使用block要先做判断；
-
-- KVO造成的Crash：
-  eg:观察者是局部变量；被观察者是局部变量；没有实现observeValueForKeyPath:；重复移除观察者；另外需要注意一个不会崩溃的现象：如果重复添加观察者，不会导致崩溃，但是一次改变会被观察多次；
-  解决方案：
-
-  - 1、尽可能合理使用；
-  - 2、add和remove一定要成对出现；
-
-- 集合类Crash：
-  eg:数组越界；向数组添加nil对象；在数组遍历时进行移除操作；字典使用setObject:forKey:时，key为nil；字典使用setObject:forKey:时，objct为nil;字典使用setValue:forKey:时，key为nil。这里要注意setValue和setObjct的区别：
-
-  ```
-   NSMutableDictionary * dic = [NSMutableDictionary dictionary];
-    [dic setObject:nil forKey:@"1"]; //crash
-    [dic setValue:nil forKey:@"1"]; // not crash
-    [dic setObject:@"1" forKey:nil]; //crash
-    [dic setValue:@"1" forKey:nil]; //crash
-  ```
-
-  解决方案：
-
-  - 1、可以给集合类添加category，method swizzling原来方法，判断后再处理；
-  - 2、使用可变字典添加元素时，尽可能使用setValue:forKey:
-  - 3、NSMutableArray、NSMutableDictionary不是线程安全的，所以在多线程下要保证写操作的原子性。可以使用加锁、信号量、串行队列、dispatch_barrier_async等；或者使用NSCache代替；
-
-- 多线程Crash：
-  eg:子线程更新UI；Dispatch_Group中level比enter次数更多；Dispatch_semaphore使用时重新复制或置空；多线程下非线程安全的可变集合的使用；
-  解决方案：
-
-  - 1、使用集合时要确保操作的原子性；可以使用加锁、信号量、串行队列、dispatch_barrier_async等；或者使用NSCache代替；
-  - 2、熟练使用Dispatch_Group、Dispatch_semaphore等；
-  - 3、多线程发送Crash时，会收到SIGSEGV信号，表面视图访问未分配给自己的内存、或视图往没有写权限的地址写数据；
-
-- Socket造成的Crash：
-  原因：当服务器close一个连接时，若client端接着发数据。根据TCP协议的规定，会收到一个RST响应，client若再往这个服务器发送数据时，系统会发出一个SIGPIPE信号给进程，告诉进程这个连接已断开，不要再写数据了。而根据信号的默认处理规则，SIGPIPE信号的默认执行动作是terminate(终止、退出),所以client会退出。
-  eg：长连接socket或重定向管道进入后台，没有关闭导致崩溃的解决方法；
-  解决方案：
-
-  - 1、切换到后台是，关闭长连接和管道，回到前台重新创建；
-  - 2、使用signal(SIGPIPE,SIG_IGN)将SIGPIPE设置为SIG_IGN,相当于将SIGPIP交给系统处理，客户端不执行默认操作，即不退出。
-
-- Watch Dog超时造成的Crash：
-  原因：主线程执行耗时操作，导致主线程被卡超过一定时间。一般异常编码是0x8babf00d，表示应用发送超时而被iOS系统终止。
-  eg:长期卡顿导致崩溃；
-  解决方案：
-  尽可能将耗时操作异步放到后台线程。主线程只负责更新UI和事件响应。
-
-- 后台返回NSNull导致的崩溃：
-  eg:后台返回NSNull，解析完成后，使用时会crash；
-
-  ```
-  NSNull *nullStr = [[NSNull alloc] init];
-  NSMutableDictionary* dic = [NSMutableDictionary dictionary];
-  [dic setValue:nullStr forKey:@"key"]; //not crash
-  NSNumber* number = [dic valueForKey:@"key"];// crash 相当于调用了get方法，会报“unrecognized selector”
-  ```
-
-  解决方案：NSNull用于OC对象的占位，一般会作为集合类型的占位元素，给NSNull对象发送消息会crash。
-
-  - 可以使用NullSafe第三方库。
-
-[iOS中常见Crash总结](https://juejin.im/post/5c617b85e51d45015e0475ac#heading-3)
-
-#### Crash捕获
-
-iOS的主要崩溃分为三大类，一类是OC抛出的Exception异常，可以通过注册NSUncaugthExceptionHandler来捕获；一类是Mach异常，比如说野指针访问、线程问题，这一类异常会被转换成Signal信号，可以通过注册signalHandler来捕获。还有一类则是无法使用信号和Exception捕获的，比如像后台任务超时、内存被爆、主线程卡顿超阈值等。
-
-前两类异常的捕获：
-
-这里需要注意的是，避免与Bugly这种工具冲突覆盖掉handler的问题，所以使用之前要先进行判断。再处理完自己的handler之后再抛出去。
-
-```
-//一、OC异常处理函数
-// OC层中未被捕获的异常，通过注册NSUncaughtExceptionHandler捕获异常信息
-void InstallUncaughtExceptionHandler(void) {
-//注册
-    if(NSGetUncaughtExceptionHandler() != custom_exceptionHandler)
-    oldhandler = NSGetUncaughtExceptionHandler();   
-    uncaught_exception_handler(&custom_exceptionHandler);
-}
-static void uncaught_exception_handler (NSException *exception) {
-	//获取exception的异常堆栈，NSThread也对应一个类方法的callStackSymbols
-    NSArray *stackArray = [exception callStackSymbols]; 
-    //出现异常的原因
-    NSString *reason = [exception reason];
-    //异常名称
-    NSString *name = [exception name];
-    NSString *exceptionInfo = [NSString stringWithFormat:@"Exception reason：%@\nException name：%@\nException stack：%@",
-                               name,
-                               reason,
-                               stackArray];
-    NSMutableArray *tmpArr = [NSMutableArray arrayWithArray:stackArray];
-    [tmpArr insertObject:reason atIndex:0];
-    //保存到本地，以便下次启动查看
-    [exceptionInfo writeToFile:[NSString stringWithFormat:@"%@/Documents/error.log",NSHomeDirectory()]
-                    atomically:YES
-                      encoding:NSUTF8StringEncoding
-                         error:nil];
-}
-
-//二、Unix标准的signal机制处理函数
-// 内存访问错误，重复释放等错误就无能为力了，因为这种错误它抛出的是Signal，所以必须要专门做Signal处理。 OC中层不能转换的Mach异常，利用Unix标准的signal机制，注册SIGABRT, SIGBUS, SIGSEGV等信号发生时的处理函数。
-void registerSignalHandler(void) { 
-	signal(SIGSEGV, handleSignalException);    
-	signal(SIGFPE, handleSignalException);    
-	signal(SIGBUS, handleSignalException);   
-    signal(SIGPIPE, handleSignalException); //这个就是上文中socket长连接,服务器关闭之后系统发出的终止进程的信号，如果想不退出，则可以signal(SIGPIPE，SIG_IGN)，然后重定向服务器。
-    signal(SIGHUP, handleSignalException);    
-    signal(SIGINT, handleSignalException);    
-    signal(SIGQUIT, handleSignalException);    
-    signal(SIGABRT, handleSignalException);    
-    signal(SIGILL, handleSignalException);
-    }
-    
-void handleSignalException(int signal) {    
-	NSMutableString *crashString = [[NSMutableString alloc]init];  
-    void* callstack[128];   
-    int i, frames = backtrace(callstack, 128);   
-    char** traceChar = backtrace_symbols(callstack, frames);    
-    for (i = 0; i <frames; ++i) {        
-    	[crashString appendFormat:@"%s\n", traceChar[i]];   
-    }    
-  	NSLog(crashString);
-}
-
-- (BOOL)application:(UIApplication *)application didFinishLaunchingWithOptions:(NSDictionary *)launchOptions {
-    InstallUncaughtExceptionHandler();
-    registerSignalHandler();
-    return YES;
-}
-```
-##### 对于无法捕获的崩溃怎么处理
-* 后台崩溃：
-  当程序被退到后台后，只有几秒的时间可以执行代码，接着会被挂起，挂起后会暂停所有线程。但是如果是数据读写的线程则无法暂停只能被中断，中断的话，系统会主动杀掉APP，而且中断时数据容易被损坏，。
-  APP退到后台后，默认是使用Background Task方式，就是系统提供了beginBackgroundTaskWithExpirationHandler方法来延长后台执行时间，可以给到3分钟左右时间去处理退到后台还需处理的任务。3分钟未执行完成的话，还是会被杀掉。
-
-  * 如何避免呢？对于要在后台处理的数据要严格把控大小，太大的数据可以考虑下次启动的时候处理。
-  * 怎么监控呢？在Background Task里进行计时，如果时间接近3分钟，任务还在执行，那么就可以判断它即将后台崩溃，然后记录下内容，进行上报。
-
-* 内存被爆 和 主线程超时：
-  内存被爆和主线程超时，都是由于Watch Dog检测到超时，而向系统杀掉导致的。那这类监控和后台崩溃一样，需要先找到它的阈值，然后临近阈值时进行收集和上报。
-
-
-#### 各种检测
-##### 子线程UI检测
-原理：Hook UIView的三个必须在主线程操作的绘制方法：setNeedsDisplay、setNeedsLayout、setNeedsDisplayRect。然后判断他们是否在子线程中操作，如果是在子线程中进行的话，打印出当前代码调用堆栈。
-##### 帧率监测
-原理：帧率FPS检测主要是检测APP的界面卡顿，判断流畅性。通常的做法是基于CADisplayLin做FPS计算，CADisplayLink是Core Animation提供的一个类似NSTimer的定时器，它会在屏幕每次刷新回调一次，所以它也是以runloop的帧率为标准。所以只需统计每秒方法执行的次数，次数/时间就可以得出帧率了。但是它无法真正定位到性能。
-```
--(void)starRecord{
-    if(_link) {
-        _link.paused = NO;
-    }else{
-        _link = [CADisplayLink displayLinkWithTarget:self selector:@selector(trigger:)];
-        [_link addToRunLoop:[NSRunLoop mainRunLoop] forMode:NSRunLoopCommonModes];
-    }
-}
-- (void)trigger:(CADisplayLink * link) {
-    if ( lastTime == 0 ){
-       	lastTime = link.timestamp;
-        return;
-    }
-    
-    count ++;
-    NSTimeInterval delta = link.timestamp - lastTime;
-    if (delta < 1) return;
-    lastTime = link.timestamp;
-    CGFloat fps = count / delta;
-    count = 0;
-}
-```
-##### CPU使用监测
-原理：CPU长时间处于高消耗的状态，会使手机发热，耗电量加剧，导致APP产生卡顿。所以要对APP的CPU使用进行监测；
-方案就是：使用task_threads函数，获取当前APP所有的线程列表，然后遍历每一个线程，通过thread_info函数获取每一个非闲置线程的cpu使用。
-
-```
-+ (CGFloat)cpuUsageForApp {
-	// mach_port_t 类似的指针数组，用于存放从线程
-	thread_array_t         thread_list; 
-	//unsigned int 存放获取的线程数
-	mach_msg_type_number_t thread_count; 
-    thread_info_data_t     thinfo;
-    mach_msg_type_number_t thread_info_count;
-    /*
-	线程基本信息：thread_basic_info_t
-	struct thread_basic_info {
-       time_value_t    user_time;  //用户运行时长
-       time_value_t    system_time;  //系统运行时长
-       integer_t       cpu_usage;  //cpu使用率，应该是指占整体的百分百
-       policy_t        policy;     //调度策略
-       integer_t       run_state;   //运行状态
-       integer_t       flags;        //各种标记
-       integer_t       suspend_count;  //暂停线程时的计数，不知道有啥用
-       integer_t       sleep_time;    //休眠时长
-	};
-	*/
-    thread_basic_info_t basic_info_th;
-    
-    /* get threads in the task
-	获取当前进程中 线程列表
-	mach_task_self() 返回 mach_port_t 类型，应该是指当前进程
-	c语言中引用一般是用于做返回值的，所以这个函数的作用就是从当前进程中获取所有线程数组，及线程数。返回是否成功的Bool值（C语言中非0就是true）。
-    */
-    kern_return_t kr = task_threads(mach_task_self(), &thread_list, &thread_count);
-    if (kr != KERN_SUCCESS)
-        return -1;
-    float tot_cpu = 0;
-    for (int j = 0; j < thread_count; j++) {
-        thread_info_count = THREAD_INFO_MAX;
-        //thread_info用来获取当前这个线程的具体信息。
-        kr = thread_info(thread_list[j], THREAD_BASIC_INFO,
-                         (thread_info_t)thinfo, &thread_info_count);
-        if (kr != KERN_SUCCESS)
-            return -1;
-        basic_info_th = (thread_basic_info_t)thinfo;
-        //这个与操作就是判断线程是否是一个空闲线程
-        if (!(basic_info_th->flags & TH_FLAGS_IDLE)) {
-            //宏定义TH_USAGE_SCALE返回CPU处理总频率 
-            tot_cpu += basic_info_th->cpu_usage / (float)TH_USAGE_SCALE;
-            //如果要获取线程堆栈应该放在这里。
-            ... ...
-		}
-	}
-    
-    // 注意方法最后要调用 vm_deallocate，防止出现内存泄漏
-    kr = vm_deallocate(mach_task_self(), (vm_offset_t)thread_list, thread_count * sizeof(thread_t));
-    assert(kr == KERN_SUCCESS);
-    return tot_cpu;
-}
-```
-##### 内存消耗监测：
-内存消耗监测与CPU使用监测一样的，通过使用task_info来获取进程的虚拟信息，然后获取到phys_footprint。
-```
--(NSInterger)useMemoryForApp {
-    task_vm_info_data_t vmInfo;
-    mach_msg_type_number_t count = TASK_VM_INFO_COUNT;
-    kern_return_t kernelReturn = task_info(mach_task_self(), TASK_VM_INFO, (task_info_t) &vmInfo, &count);
-	if(kernelReturn == KERN_SUCCESS)
-	{
-    	int64_t memoryUsageInByte = (int64_t) vmInfo.phys_footprint;
-    	return (NSInteger)(memoryUsageInByte/1024/1024);
-	}
-	else
-	{
-    	return -1;
-	}
-}
-```
-
-##### 监测卡顿：
-一种检测卡顿的方法是：重写一个NSThread的子类，设置一个时间间隔和最大Watch Dog时间阈值。然后重写她的main函数，在函数里开启一个while循环，然后在时间间隔内查看主线程是否能够及时处理事件，如果主线程能及时处理消息，则说明不卡顿。如果不能处理，则获取主线程的线程堆栈，然后在主线程操作信号量发出之后或者超过最大Watch Dog时间阈值，则将获取到的线程堆栈及卡顿时长进行记录，视为一次卡顿，如果超过一个watch dog阈值则可以视为一次卡顿崩溃，先暂时存起来，如果后续有主线程的信号过来，则把假定的Watch Dog崩溃日志去除。
-```
-- (void)main {
-  //在main函数里，只要没有取消当前子线程，就while循环，查看主线程是否可以响应事件。每次循环都sleep一个阈值的时间。
-      while (!self.cancelled) {
-          printf("\n");
-          //查看线程是否活跃
-          if (_isApplicationInActive) {
-              //标志位，用于查看主线程是否有处理的标志
-              self.mainThreadBlock = YES;
-              //主线程堆栈信息
-              self.reportInfo = @"";
-              self.startTimeValue = [[NSDate date] timeIntervalSince1970];
-              printf("1开始查看\n");
-              dispatch_async(dispatch_get_main_queue(), ^{
-                  self.mainThreadBlock = NO;
-                  printf("2执行了主线程，发出信号\n");
-                  verifyReport();
-                  //如果主线程能够响应，则对信号量进行加一
-                  dispatch_semaphore_signal(self.semaphore);
-              });
-              //阻塞当前线程threshold秒
-              [NSThread sleepForTimeInterval:self.threshold];
-              printf("3sleep醒来\n");
-              if (self.isMainThreadBlock) {
-                  printf("4主线程未来得急执行\n");
-                  //如果发生了卡顿，则在threshold秒后，上面主线程肯定是没有执行的。
-                  self.reportInfo = [DoraemonBacktraceLogger doraemon_backtraceOfMainThread]; //这里包含堆栈的查看信息
-              }
-              //如果信号量小于等于0，则阻塞，如果大于0，则先对信号量减一，再执行block操作。或者到最大卡顿崩溃时间之后自动执行，下面这个300可以视为watch Dog的查杀时间
-              dispatch_semaphore_wait(self.semaphore, dispatch_time(DISPATCH_TIME_NOW, 300.0 * NSEC_PER_SEC));
-              {
-                  //卡顿超时情况;
-                  if self.isMainThreadBlock {
-                      //说明是超过了300.0秒
-                      printf("5超过最大Watch Dog时间阈值：%f\n",[[NSDate date] timeIntervalSince1970]);
-                  }else{
-                      printf("5刚收到信号：%f\n",[[NSDate date] timeIntervalSince1970]);
-                  }
-                  verifyReport();
-              }
-              //如果不卡顿，执行顺序是1、2、3、5；如果卡顿了，则执行顺序是1、3、4、2、5。主线程卡顿多长时间，wait就等待多长时间，或者主线程卡顿的时间超过了300秒。等主线程反应过来之后，对信号量进行加1，则就可以走之后的流程了。但是这也存在一个问题，如果是卡顿太久，导致了崩溃呢！这里就收不到信号了。
-          } else {
-              //阻塞当前线程threshold秒
-              [NSThread sleepForTimeInterval:self.threshold];
-          }
-      }
-  }
-```
-
-另一种方法是：就是根据RunLoop的事件循环状态，因为RunLoop大部分处理的事件是在KCFRunLoopBeforeSources和KCFRunLoopBeforeWaiting之间以及KCFRunLoopAfterWaiting之后。所以开启一个子线程，监听RunLoop的状态，如果长期处于KCFRunLoopBeforeSources或KCFRunLoopAfterWaiting状态，则可以判断为卡顿状态。大概的模拟操作就是：
-```
-// 创建子线程监控
-dispatch_async(dispatch_get_global_queue(0, 0), ^{
-    // 子线程开启一个持续的 loop 用来进行监控
-    while (YES) {
-        long semaphoreWait = dispatch_semaphore_wait(dispatchSemaphore, dispatch_time(DISPATCH_TIME_NOW, 3 * NSEC_PER_SEC));
-        if (semaphoreWait != 0) {
-            if (!runLoopObserver) {
-                timeoutCount = 0;
-                dispatchSemaphore = 0;
-                runLoopActivity = 0;
-                return;
-            }
-            //BeforeSources 和 AfterWaiting 这两个状态能够检测到是否卡顿
-            if (runLoopActivity == kCFRunLoopBeforeSources || runLoopActivity == kCFRunLoopAfterWaiting) {
-                // 将堆栈信息上报服务器的代码放到这里
-            } //end activity
-        }// end semaphore wait
-        timeoutCount = 0;
-    }// end while
-});
-```
-
-
-
-##### 流量监控
-
-iOS的类NSURLProtocol可以拦截NSURLConnect、NSURLSession、UIWebView中的所有网络请求，获取每一次请求的request和response对象。但是这个类没法拦截TCP请求。可以使用URLProtocol做如下事情：
-* 重定向网络请求
-* 忽略网络请求，使用本地缓存
-* 自定义网络请求的返回结果
-* 一些全局的网络请求设置
-
-[NSURLProtocol的使用](https://www.jianshu.com/p/ec5d6c204e17)
-
-
-
-#### 堆栈收集与分析。
-
-堆栈获取的话，一种是**直接使用系统函数**，类似使用signal捕获的方式获取堆栈，但是它不太好定位到具体函数，堆栈信息符号化不好处理。还有一种就是直接使用**PLCrashReporter开源库**。PLCrashReporter开源库能够定位到具体代码位置，性能消耗也不是很大。
-
-
-
-
-[iOS Crash的捕获知识](<https://www.jianshu.com/p/5fcf7bb7955f>)
-
-crash崩溃堆栈分析(略)
-[移动监控体系之技术原理](<https://www.jianshu.com/p/8123fc17fe0e>)
-[了解和分析iOS Crash Report](<https://juejin.im/post/5c5edb37e51d457f926d2290#heading-25>)
-[iOS crash日志堆栈解析](<https://juejin.im/post/5adf15f2518825671775f3e1>)
-[iOS崩溃异常捕获](<https://juejin.im/post/5a93c9385188257a7b5aba42>
-
-#### Core Text 
-上述异步绘制中设计到CoreText，所以这里简单介绍一下：
-三个类：CTFrameRef: 画布；CTLineRef: 每一行；CTRunRef:每一小段。
-每个画布(CTFrameRef)可以包含多行(CTLineRef)，每一行可以包含多个小段(CTRunRef)。
-绘制步骤：
-首先一般的绘制都是异步绘制，所以基本是在display函数或者drawRect函数中。因为这样才能拿到context
-```
-	//
-	CGContextRef context = UIGraphicsGetCurrentContext();
-    //变换坐标
-    CGContextSetTextMatrix(context, CGAffineTransformIdentity);
-    CGContextTranslateCTM(context, 0, self.bounds.size.height);
-    CGContextScaleCTM(context, 1.0, -1.0);
-    //设置绘制的路径
-    CGMutablePathRef path = CGPathCreateMutable();
-    CGPathAddRect(path, NULL, self.bounds);
-	/创建属性字符串
-    NSMutableAttributedString * attStr = [[NSMutableAttributedString alloc] initWithString:str4];
-
-    //颜色
-    [attStr addAttribute:(__bridge NSString *)kCTForegroundColorAttributeName value:(__bridge id)[UIColor redColor].CGColor range:NSMakeRange(5, 10)];
-
-    //字体
-    UIFont * font = [UIFont systemFontOfSize:25];
-    CTFontRef fontRef = CTFontCreateWithName((__bridge CFStringRef)font.fontName, 25, NULL);
-    [attStr addAttribute:(__bridge NSString *)kCTFontAttributeName value:(__bridge id)fontRef range:NSMakeRange(20, 10)];
-
-    //空心字
-    [attStr addAttribute:(__bridge NSString *)kCTStrokeWidthAttributeName value:@(3) range:NSMakeRange(36, 5)];
-    [attStr addAttribute:(__bridge NSString *)kCTStrokeColorAttributeName value:(__bridge id)[UIColor blueColor].CGColor range:NSMakeRange(37, 10)];
-
-    //下划线
-    [attStr addAttribute:(__bridge NSString *)kCTUnderlineStyleAttributeName value:@(kCTUnderlineStyleSingle | kCTUnderlinePatternDot) range:NSMakeRange(45, 15)];
-
-    CTFramesetterRef framesetter = CTFramesetterCreateWithAttributedString((CFAttributedStringRef)attStr);
-    CTFrameRef frame = CTFramesetterCreateFrame(framesetter, CFRangeMake(0, attStr.length), path, NULL);
-
-    //绘制内容
-    CTFrameDraw(frame, context);
-```
-[Core Text编程指南](https://juejin.im/post/5c5154e9e51d4503834dabf4)
-
-
-
-
-### 启动优化
-* 冷启动是指APP不在后台，第一次打开
-* 热启动是指APP在后台被唤起。
-#### 冷启动优化
-APP启动主要分为三个阶段：main函数之前、main函数之后、首屏渲染完成：
-* main函数之前：
-  主要工作：加载可执行文件；加载动态链接库；运行时处理(包括类的注册、category注册、selector唯一性检测等)；初始化(+load方法、创建c++静态全局变量)。
-  所以可以做的事情就包括：
-  * 减少动态库的加载，苹果公司建议使用更大的动态库，可以考虑将多个库进行合并，数量上建议是6个非系统动态库；
-  * 删减无用的代码和类；
-  * +load方法尽量少用，或者将里面的内容挪到其他地方，比如+initialize()；控制c++全局变量的数量；
-
-* main函数之后：
-
-  这个阶段主要是指从main函数开始，到APPDelegatD的didFinishLaunchingWithOptions方法里首屏渲染相关方法的执行；我的理解就是main函数到设置window的root结束。
-  可以做的事情包括：
-
-  * 不要将各种无必要的类的初始化、配置文件的读写、首屏列表的数据获取和渲染相关等放到这个区间里面。比如说首页列表，通常会直接在viewdidload里做，这样是不好的。
-
-* 首屏渲染完成：
-	这个阶段就是从首屏渲染到didFinishLaunchingWiithOptions方法作用域结束为止。这个阶段用户已经能看到首屏数据了，所以要注意的就是主线程卡顿相关的问题。
-	
-##### 启动耗时检测：略
 
 
 
