--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -160,17 +160,16 @@ A *a = [[A alloc]init];
 
 #### Runtime 基础数据结构
 * 先来分析一下runtime的基础数据结构，从数据结构中了解OC的部分运行时特性：
-OC中所有的对象都是id类型，id类型在runtime时被编译为objc_object结构体，objc_object包含了一个isa指针。OC中类对象Class在runtime中被编译成objc_class结构体，objc_class继承自objc_object。objc_class包含一个superClass指针，一个cache_t结构体，一个class_data_bits_t结构体。cache_t是一个可增量扩展的哈希表结构，它里面的每一个元素是bucket_t的结构体，bucket_t结构体里包含一个key和一个IMP。class_data_bits_t是对class_rw_t结构体的封装，class_rw_t里包含一个class_ro_t结构体、一个protocols二维数组、一个properties二维数组、一个methods二维数组。class_ro_t里包含一个name、一个ivars数组、一个protocols数组、一个properties数组、一个methods数组。methods数组里是一个method_t的结构体，method_t里包含一个SEL、IMP、const char*类型的字符串。
+  OC中所有的对象都是id类型，id类型在runtime时被编译为objc_object结构体，objc_object包含了一个isa指针。OC中类对象Class在runtime中被编译成objc_class结构体，objc_class继承自objc_object。objc_class包含一个superClass指针，一个cache_t结构体，一个class_data_bits_t结构体。cache_t是一个可增量扩展的哈希表结构，它里面的每一个元素是bucket_t的结构体，bucket_t结构体里包含一个key和一个IMP。class_data_bits_t是对class_rw_t结构体的封装，class_rw_t里包含一个class_ro_t结构体、一个protocols二维数组、一个properties二维数组、一个methods二维数组。class_ro_t里包含一个name、一个ivars数组、一个protocols数组、一个properties数组、一个methods数组。methods数组里是一个method_t的结构体，method_t里包含一个SEL、IMP、const char*类型的字符串。
 
 * 注意几个关键词：
-  * isa指针是指向当前对象所属的类。它分为指针型isa和非指针型isa。指针型isa的所有数据都用于存储所属类的地址，非指针型的isa只有部分内容用来存储所属类的地址。我们可以说含有isa指针的结构体都是对象，比如说runloop、block等。 	
+  * isa指针是指向当前对象所属的类。它分为指针型isa和非指针型isa。指针型isa的所有数据都用于存储所属类的地址，非指针型的isa只有部分内容用来存储所属类的地址。我们可以说含有isa指针的结构体都是对象，比如说runloop、block等。其次，类也是一种对象，因为它继承自objc_object，称之为类对象。所以isa的指向就包括：对象的isa指向类对象，类对象的isa指针指向元类，元类的isa指针指向根元类，根元类的isa指针指向它本身
   * 类对象的superClass指针指向父类对象，元类对象的superClass指针指向元类的父类，根元类的superClass指针指向NSObject，NSObject的superClass指针为nil；
   * cache_t 是一个用于快速查找方法执行函数。它是一个可增量扩展的哈希表结构。是计算机局部性原理的应用；runtime通过key进行hash算法定位到对应的bucket_t，然后获取IMP。
 
 * 几个重要的点：
-  * 1、类也是一种对象，因为它继承自objc_object，称之为类对象。其中isa的指向就包括：对象的isa指向类对象，类对象的isa指针指向元类，元类的isa指针指向根元类，根元类的isa指针指向它本身；
-  * 2、class_rw_t里的二维数组实际是对应category里的protocols、properties、methods。每一个category对应一个元素。所以方法查找时会先查找category里的方法；而class_ro_t是指只读的相关数据，也就是说已编译好的对象是无法在通过分类添加成员变量的。在class_rw_t的方法列表中查找时，对于已排到的使用二分法查找，对于没有排序的直接遍历查找。
-  * 3、superClass指针的指向代表了方法查找的过程。也就是说对于实例方法，会沿着类对象的方法列表（此处先省略缓存查找等细节）进行查找，找不到就查找父类的方法列表，最后找的NSObject。而类方法的查找是在元类的方法列表中进行查找，以此往上查找，找的根元类的时候，由于根元类的superClass指针指向NSObject，所以又会去查找对应对象的实例方法。
+  * 1、class_rw_t里的二维数组实际是对应category里的protocols、properties、methods。每一个category对应一个元素。所以方法查找时会先查找category里的方法；而class_ro_t是指只读的相关数据，也就是说已编译好的对象是无法在通过分类添加成员变量的。在class_rw_t的方法列表中查找时，对于已排到的使用二分法查找，对于没有排序的直接遍历查找。
+  * 2、superClass指针的指向代表了方法查找的过程。也就是说对于实例方法，会沿着类对象的方法列表（此处先省略缓存查找等细节）进行查找，找不到就查找父类的方法列表，最后找的NSObject。而类方法的查找是在元类的方法列表中进行查找，以此往上查找，找的根元类的时候，由于根元类的superClass指针指向NSObject，所以又会去查找对应对象的实例方法。
 
 #### Runtime涉及的事件
 * objc_msgSend：
