微视商业化总结

--- a/读书笔记/iOS高级笔记/知识小集01.md
+++ b/读书笔记/iOS高级笔记/知识小集01.md
@@ -109,6 +109,7 @@ UIViewController *vc = [[Router sharedInstance] openURL:@"myapp://good/detail"]
 [组件间通信](https://juejin.im/entry/5baaf45cf265da0afb334b25)
 [组件化及其通讯方案](https://juejin.im/entry/5baaf45cf265da0afb334b25)
 
+* 面试题：组件化有什么好处，两个组件通信如何协议解耦？
 
 
 #### 实践
@@ -199,6 +200,15 @@ iOS 10之后，UITableView和CollectionView都提供了一个预加载的接口:
 那解决方案就分为两个场景：
 * 如果显示的UIView较小，则应该通过上述降低采样率的方式，加载缩略图；
 * 如果是那种像微信、微博详情那样的大图，则应该全屏加载大图，通过拖动来查看不同位置图片的细节。技术细节就是使用苹果的CATiledLayer去加载，它可以分片渲染，滑动时通过映射原图指定位置的部分图片数据解码渲染。
+
+
+
+#### 面试题
+* 图片占用内存由什么决定？描述图片从磁盘加载到内存再展示发生了几次copy，SDWebImage对这次copy做了哪些优化？
+* 图片从加载到展示全流程描述？
+* UIImageView加载有哪些方法，分别什么特点，imageWithName加载图片的时候，解码发送在什么时候
+* jpg和png加载到内存中后有什么区别
+* 圆角、阴影、光栅化为什么造成卡顿，怎么解决？
 
 [iOS图像最佳实践](<https://juejin.im/post/5c84bd676fb9a049e702ecd8>)
 [周小可—图片的编码与解码](https://hnxczk.github.io/blog/articles/image_decode.html#imagewithcontentsoffile)
