--- a/读书笔记/iOS高级笔记/微视商业化.md
+++ b/读书笔记/iOS高级笔记/微视商业化.md
@@ -1,12 +1,12 @@
-1、卡顿与优化中，如果像微博、微信这种一直有数据过来的话，那你的异步绘制需要怎么处理？（大概率是说大量的新数据过来，但是你旧数据依旧还在绘制，那么怎么去进行一些数据的更新与替换？）
+1、聊了一下卡顿优化处理。问题：卡顿与优化中，如果像微博、微信这种一直有数据过来的话，那你的异步绘制需要怎么处理？（大概率是说大量的新数据过来，但是你旧数据依旧还在绘制，那么怎么去进行一些数据的更新与替换？问题类似怎么权衡这个取舍）
 
 在提醒之下，回答说了用两个队列去装载新数据和正在绘制的数据，然后可以用栅栏或者group方式先阻塞新数据的进入。但是貌似不是他想要的答案！
 
-2、子线程监听RunLoop的卡顿，为什么一定比直接监听主线程RunLoop卡顿，除了开线程的消耗有哪些其他的原因？（追问：什么是线程？知不知道线程缓存？）
+2、聊了卡顿检测的两种三种方案后，问题：子线程监听RunLoop的卡顿，为什么一定比直接监听主线程RunLoop卡顿性能消耗大，除了开线程的消耗有哪些其他的原因？（追问：什么是线程？知不知道线程缓存？）
 
-3、组件化中，怎么处理网络请求模块对应不同APP的不同需求？如果要随时换请求第三方库，是否方便？要怎么设计这个pod来应对不一样的APP需求，比如说不同的加密方式，单元测试等，就是怎么设计才能更好的做到这个模块的封装？（有提醒我是否使用某一种设计原则？应该是里斯替换原则，但是原则名字没想起来，用kvo的方式把里斯替换原则的原理说了一遍）
+3、聊组件化，组件通信。问题：组件化中，怎么处理网络请求模块对应不同APP的不同需求？如果要随时换请求第三方库，是否方便？要怎么设计这个pod来应对不一样的APP需求，比如说不同的加密方式，单元测试等，就是怎么设计才能更好的做到这个模块的封装？（有提醒我是否使用某一种设计原则？应该是里斯替换原则，但是原则名字没想起来，用kvo的方式把里斯替换原则的原理说了一遍）
 
-4、问了一下block相关内容，追问了_ _ block作用和 _ _ forwarding指针
+4、问了一下block相关内容，追问了_ _ block作用和 _ _ forwarding指针。基本没什么问题
 
 5、算法，
 
