开启新的学习计划

--- a/读书笔记/iOS高级笔记/卡顿与崩溃专题.md
+++ b/读书笔记/iOS高级笔记/卡顿与崩溃专题.md
@@ -1,3 +1,11 @@
+---
+title: iOS-技能知识小集
+date: 2020-7-1 17:36:48
+tags: 卡顿、崩溃
+categories: iOS进阶
+description: 总结了iOS学习中卡顿、常见的Crash的学习，及其他性能优化相关。
+---
+
 ### Crash 及 APP 性能监控相关
 
 #### 卡顿处理 具体实践流程 (结合各种实际demo的总结)
