--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -3,7 +3,7 @@ title: iOS-技能知识小集
 date: 2020-5-9 17:36:48
 tags: knoeledgePoints
 categories: iOS进阶
-description:  总结了OC学习当中的主要知识点。底层进阶相关的理论知识点为主
+description:  总结了OC学习当中的主要知识点。以底层进阶相关的理论知识点为主，以经常遇到的面试点为辅
 ---
 
 ### UI相关
