--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -146,7 +146,7 @@ category是在运行时方法objc_init添加进类当中的，根据运行时方
 
 #### 属性关键字
 * 读写属性：readwrite: 默认，可读可写；readOnly: 只读；
-* 原子属性：atomic: 原子性; nonatomic: 非原子性。atomic并不能完全包住线程安全，atomic能够保证读写方法的原子性，比如：如果是一个可变数组的话，只能保证数组的读写方法的原子性，但是对数组里元素的操作是没法保证原子性的。一般我们保证可变数组的线程安全的最直接方式是使用信号锁，如果要实现多读单写则要使用dispatch_barrier_async。
+* 原子属性：atomic: 原子性; nonatomic: 非原子性。atomic并不能完全包证线程安全，atomic能够保证读写方法的原子性，比如：如果是一个可变数组的话，只能保证数组的读写方法的原子性，但是对数组里元素的操作是没法保证原子性的。一般我们保证可变数组的线程安全的最直接方式是使用信号锁，如果要实现多读单写则要使用dispatch_barrier_async。
 * assign & weak：assign可以修饰基础数据类型和对象类型，但是修饰的对象类型，在对象释放后不会自动置为nil，容易导致垂悬指针错误；weak只能用于修饰对象类型，weak指针指向的对象释放后，会在dealloc内部对weak指针置为nil操作。所以一般使用是用weak修饰对象类型，用assign修饰基础数据类型。其次他们修饰对象类型的话也都不会增加所指对象的引用计数。
 * copy：copy一般用于修饰不可变集合类型和block；
 * 浅拷贝 & 深拷贝：浅拷贝是指拷贝一个指针，与被拷贝对象是同一个内存区域，也就是会增加被拷贝对象的引用计数；深拷贝是将内存区域重新生成一份，然后用指针指向它，不会增加被拷贝对象的引用计数。(如何记忆？原则上，对拷贝完成之后的对象进行操作，不会影响原有对象则为深拷贝，否则为浅拷贝。比如，对不可变对象进行copy，结果是不可变对象，也就是拷贝前后的对象其实是可以使用同一块内存区域的；对可变对象进行copy，结果是不可变对象，那对拷贝之后的对象进行操作要不影响原有对象，只能拷贝另一份内存区域，所以是深拷贝；同样的，无论对可变还是不可变对象进行mutableCopy，最好都生成可变对象，对拷贝之后的对象进行操作，想要不影响原有对象，则必须拷贝另一份内存区域，所以是深拷贝)
@@ -405,7 +405,7 @@ _ timer = [NSTimer scheduledTimerWithTimeInterval:1.0f target: _ hzProxy selecto
 
 #### --block：
 什么是 _ _ block? 
-添加了 _ _ block修饰符的变量最终会变成一个multiple的结构体，结构体中含有isa指针。也就是说 使用了 _ _ block修饰的变量最终变成了对象。但是在**ARC和MRC下是有区别**的。**在MRC下使用 _ _ block修饰的变量，不会增加对象的引用计数；在ARC下，使用 _ _ block修饰的变量，会增加其引用计数**。所以就有一道痕经典的面试题:
+添加了 _ _ block修饰符的变量最终会变成一个结构体，结构体中含有isa指针。也就是说 使用了 _ _ block修饰的变量最终变成了对象。但是在**ARC和MRC下是有区别**的。**在MRC下使用 _ _ block修饰的变量，不会增加对象的引用计数；在ARC下，使用 _ _ block修饰的变量，会增加其引用计数**。所以就有一道痕经典的面试题:
 
 ```
 {
@@ -430,6 +430,16 @@ _ timer = [NSTimer scheduledTimerWithTimeInterval:1.0f target: _ hzProxy selecto
 一般我们对block的截获变量进行赋值操作时，需要先对其进行__block。
 #### block的copy操作：
 通过上面的分析，我们知道对全局block进行copy不会有任务反应，对栈block进行copy则会被拷贝到堆上，对堆block进行copy操作则会增加其引用计数。那实际上，对栈block进行copy操作时，在堆上也产生了一个一样的block，同时也使栈block的 _ _ forwarding指向了堆区的block，所以此时对栈block进行操作实际就是通过_ _forwarding指针找到对应的堆block，然后再进行操作。同时，在MRC下，对栈block进行copy操作就如同执行了一个malloc方法，所以同样存在内存泄漏的问题。
+
+
+
+**点睛**：
+说白了，block就是对象，block调用就是函数调用。所以同理，block也就是函数调用。既然是函数调用，那它肯定就存在作用域、栈帧等问题。所以从内存的角度来分析。一个GlobalBlock，相当于没有截获任何外部变量，也就是说没有传参，所以实际上不需要分配栈空间，也不存在变量的作用域问题；一个GlobalBlock使用了外部变量，就相当于需要传参了(局部基础数据类型使用值传递，局部对象类型使用引用传递)，所以就需要开辟栈空间来管理这些内存，所以就变成了StackBlock。但是由于栈空间在函数执行完毕之后也会被回收掉，所以如果将其赋值给某些__strong类型的属性block（或者其他操作），则得将其拷贝到堆中，这时就变成了堆block。
+同样的，由于局部基础数据类型是值传递，所以就导致在block之后的修改对block里面不会有影响。所以要达到这个目标，就得使用__block，__block将基础数据类型变成了对象类型,变成了对象类型后内存自然就在堆区，然后就可以使用引用传参的方式进行传递，所以通常要对变量进行赋值，则就得用__block修饰，导致的结果就是变量变成了对象后被拷贝到了堆区。
+
+<https://cloud.tencent.com/developer/article/1517593>
+
+
 
 
 ### 内存管理
