--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -364,7 +364,7 @@ void (^block1) = ^{}; //注意，在ARC下，这里仍然是堆block，因为其
 ```
 所以 在MRC中，block属性只能使用copy关键字，在ARC中，block属性可以使用Strong关键字和copy关键字。在实际开发过程中，为了使代码在ARC和MRC中都能使用，所以我们一般推荐使用copy关键字。
 
-通过上面的分析，我们知道对全局block进行copy不会有任务反应，对栈block进行copy则会被拷贝到堆上，对堆block进行copy操作则会增加其引用计数。（那实际上，对栈block进行copy操作时，在堆上也产生了一个一样的block，同时也使栈block的 _ _ forwarding指向了堆区的block，所以此时对栈block进行操作实际就是通过_ _forwarding指针找到对应的堆block，然后再进行操作。同时，在MRC下，对栈block进行copy操作就如同执行了一个malloc方法，所以同样存在内存泄漏的问题。这一段有待商榷，单纯的copy貌似不会产生 _ _ forwarding指针）。
+通过上面的分析，我们知道对全局block进行copy不会有任务反应，对栈block进行copy则会被拷贝到堆上，对堆block进行copy操作则会增加其引用计数。_（那实际上，对栈block进行copy操作时，在堆上也产生了一个一样的block，同时也使栈block的 _ _ forwarding指向了堆区的block，所以此时对栈block进行操作实际就是通过_ _forwarding指针找到对应的堆block，然后再进行操作。同时，在MRC下，对栈block进行copy操作就如同执行了一个malloc方法，所以同样存在内存泄漏的问题。这一段有待商榷，单纯的copy貌似不会产生 _ _ forwarding指针）。
 
 #### 截获变量：
 由block的底层原理可知，block调用就是函数调用。那么block使用外部的变量，就相当于函数使用外部变量。
@@ -389,7 +389,7 @@ void (^block1) = ^{}; //注意，在ARC下，这里仍然是堆block，因为其
 #### --block：
 什么是 _ _ block? _ _ block其实是一个存储区域说明符，它可以指定变量值存储到哪个区域中。具体实现：
 添加了 _ _ block修饰符的变量最终会被封装成一个结构体：结构体中包含一个与变量同名的成员变量及其值；结构体中还包含一个 **_ _ forwarding指针，初始化指向自身地址**；结构体中含有isa指针。也就是说使用了 _ _ block修饰的变量最终变成了对象。
-但是实际上这并未从根本上改变block内部不能修改auto变量的问题。因为即使变成了对象，那也依旧是局部变量。只是，在block被拷贝到堆上时，_ _ block变量也会一并被拷贝到堆上，然后其 _ _ forwarding指针就会指向堆上的 _ _ block结构体的地址。实际访问过程中，就都是通过 _ _ forwarding指针找到最终的结构体(未进行拷贝的栈上的结构体的forwarding指针指向自身，发生拷贝后，栈上的forwarding指针指向堆区的结构体，堆区的forwarding指针指向自身)，然后访问最终的同一个变量。这样就解决了栈上变量作用域问题。
+但是实际上这并未从根本上改变block内部不能修改auto变量的问题。因为即使变成了对象，那也依旧是局部变量。只是，在block被拷贝到堆上时，_ _ block变量也会一并被拷贝到堆上，然后结构体中的 _ _ forwarding指针就会指向堆上的 _ _ block结构体的地址。实际访问过程中，就都是通过 _ _ forwarding指针找到最终的结构体(未进行拷贝的栈上的结构体的forwarding指针指向自身，发生拷贝后，栈上的forwarding指针指向堆区的结构体，堆区的forwarding指针指向自身)，然后访问最终的同一个变量。这样就解决了栈上变量作用域问题。
 
 那如果有多个block访问同一个 _ _ block变量，那么效果也是一样的，只是_ _ block变量的引用计数会增加。
 
