继续设计模式的学习

--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -159,7 +159,7 @@ category是在运行时方法objc_init添加进类当中的，根据运行时方
 #import <objc/runtime.h>
 @implementation NSObject(SetClass)
 - (void)setClass:(Class)aclass {
-   objct_setClass(self,aclass); //注意这里要确定两个类的size一样，通常需添加一个class_getInstanceSize的判断
+   objc_setClass(self,aclass); //注意这里要确定两个类的size一样，通常需添加一个class_getInstanceSize的判断
 }
 @end
 
