学习网络请求框架

--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -1220,6 +1220,8 @@ socket可以支持不同的传输层协议(TCP、UDP)，当使用TCP时，socket
 
 [swift socket实战](https://www.hangge.com/blog/cache/detail_756.html)
 
+[最详细网络协议](https://blog.csdn.net/kyl282889543/article/details/99670768)
+
 ### 数据库
 #### SQLite基础语句学习
 SQLite数据库中有一个sqlite_master的表，它定义数据库的模式，可以在其上查询以获取所有表的索引。
