--- a/读书笔记/iOS高级笔记/网络请求框架的学习.md
+++ b/读书笔记/iOS高级笔记/网络请求框架的学习.md
@@ -157,27 +157,37 @@ extension ViewController2 : URLSessionDownloadDelegate {
 ```
 
 ### Alamofire的使用
-Alamofire 核心也是在URLSession和URLSessionTask的基础之上进行分装的。使用swift语法进行链式访问。
+Alamofire 核心也是在URLSession和URLSessionTask的基础之上进行分装的。使用swift语法进行链式访问。它的设计非常简洁，完整地将网络请求、URL校验、失败重试机制、请求缓存机制、错误机制、响应解析等功能封装在一起。
 #### Alamofire整体框架
 * 线程相关：Protected.swift 
-	Protect主要是将不同类型的任务实现了加锁处理，iOS系统使用的是自旋锁。
+  Protect主要是将不同类型的任务实现了加锁处理，iOS系统使用的是自旋锁。
 * 会话：Session.swift、SessionDelegate.swift 
-	Session主要是生成URLSession，然后用于管理SessionDelegate和Request。
+  Session主要是生成URLSession，然后用于管理SessionDelegate和Request。
 * 请求：Request.swift、RequestTaskMap.swift、RequestInterceptor.swift
-	* RequestInterceptor是请求拦截器，由RequestAdapter和RequestRetry组成，用于在发送请求之前修改Request和请求失败之后的重试策略。
-	* 
+  * RequestInterceptor是请求拦截器，由RequestAdapter和RequestRetry组成，用于在发送请求之前修改Request和请求失败之后的重试策略。
+  * 
 * 响应：Response.swift、ResponseSerialization.swift
-	
 * 验证：URLConvertable+URLRequestConvertible.swift、Validation.swift
-	
 * 事件监听：EventMonitor.swift
-	
 * 综合：Alamofire.swift、AFError.swift、AlamofireExtended.swift
-	
 
-
-
+#### Alamofire 请求过程和设计思路
 <https://juejin.im/post/6844904118008430606>
+//
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <https://juejin.im/post/6844904036169154574#heading-10>
 
