--- a/读书笔记/iOS高级笔记/网络请求框架的学习.md
+++ b/读书笔记/iOS高级笔记/网络请求框架的学习.md
@@ -160,20 +160,54 @@ extension ViewController2 : URLSessionDownloadDelegate {
 Alamofire 核心也是在URLSession和URLSessionTask的基础之上进行分装的。使用swift语法进行链式访问。它的设计非常简洁，完整地将网络请求、URL校验、失败重试机制、请求缓存机制、错误机制、响应解析等功能封装在一起。
 #### Alamofire整体框架
 * 线程相关：Protected.swift 
-  Protect主要是将不同类型的任务实现了加锁处理，iOS系统使用的是自旋锁。
+  Protect主要是将不同类型的任务实现了加锁处理，然后这个文件中封装了两种锁（互斥锁和自旋锁），iOS系统使用的是自旋锁。
 * 会话：Session.swift、SessionDelegate.swift 
   Session主要是生成URLSession，然后用于管理SessionDelegate和Request。
 * 请求：Request.swift、RequestTaskMap.swift、RequestInterceptor.swift
   * RequestInterceptor是请求拦截器，由RequestAdapter和RequestRetry组成，用于在发送请求之前修改Request和请求失败之后的重试策略。
-  * 
+
+  * RequestAdapter叫做适配器，是用来设置一些公关参数，比如token之类的；
+  * RequestRetry用于重试策略；
 * 响应：Response.swift、ResponseSerialization.swift
+  * 
 * 验证：URLConvertable+URLRequestConvertible.swift、Validation.swift
 * 事件监听：EventMonitor.swift
 * 综合：Alamofire.swift、AFError.swift、AlamofireExtended.swift
 
 #### Alamofire 请求过程和设计思路
+首先看一下Alamofire的入口及解析
+
+* 入口函数参数及返回值解析：
+           * convertible: URLConvertible // 一个协议类型,可以是这里传入String、URL、URLComponents；
+           * method: HTTPMethod // 方法结构体，包含常用的所有方法类型；
+           * parameters: Encodable // 实现了Encodable协议的实例；
+           * encoder: ParameterEncoder // 实现了ParameterEncoder协议的实例，是编码格式，比如json，这个协议最终生成一个URL；
+           * headers: HTTPHeaders //请求头部信息；
+           * interceptor: RequestInterceptor // 拦截器，封装了适配器和重试策略；
+           * requestModifier: RequestModifier // 封装了一个闭包，可以在闭包里对URLRequest进行处理；
+  * return: DataRequest //最终返回一个DataRequest，它是对整个请求过程封装的一个组合类，可以理解为一次请求就生成一个DataRequest，然后它包含了整个请求过程的几乎所有数据。
+
+```
+AF.request(_ convertible: URLConvertible,
+                      method: HTTPMethod = .get,
+                      parameters: Parameters? = nil,
+                      encoding: ParameterEncoding = URLEncoding.default,
+                      headers: HTTPHeaders? = nil,
+                      interceptor: RequestInterceptor? = nil,
+                      requestModifier: RequestModifier? = nil) -> DataRequest
+```
+* 之后会根据传入的除了RequestInterceptor之外的所有参数来构建RequestConvertible，这个类型主要作用是持有这些参数并生成URLRequest；然后创建DataRequest实例；最后将DataRequest实例放入请求队列里，根据它的类型来开启请求。这里同样要说明的是DataRequest实例根据其具体的类型，也分为UploadRequest、DataRequest、DownloadRequest、DataStreamRequest，基本和URLSessionTask的类型对应。
+* 
+
+
+
+
+
+
+
+
+
 <https://juejin.im/post/6844904118008430606>
-//
 
 
 
