--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -1428,6 +1428,19 @@ UIView的一系列animationWithDuration等动画方法。在这些方法中UIVie
 
 #### OC的编译连接过程
 OC和swift都是编译型语言。通过LLVM将代码转成机器码，主要的流程包括：
+#### 0、查看编译过程
+```
+$clang -ccc-print-phases main.m
+0: input, "main.m", objective-c
+1: preprocessor, {0}, objective-c-cpp-output
+2: compiler, {1}, ir
+3: backend, {2}, assembler
+4: assembler, {3}, object
+5: linker, {4}, image
+6: bind-arch, "x86_64", {5}, image
+```
+
+
 ##### 1、**预编译**：主要是处理源代码中以“#”开头的预编译指令：
 ```
 clang -E xx.m -o xx.i
