--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -364,7 +364,7 @@ void (^block1) = ^{}; //注意，在ARC下，这里仍然是堆block，因为其
 ```
 所以 在MRC中，block属性只能使用copy关键字，在ARC中，block属性可以使用Strong关键字和copy关键字。在实际开发过程中，为了使代码在ARC和MRC中都能使用，所以我们一般推荐使用copy关键字。
 
-通过上面的分析，我们知道对全局block进行copy不会有任务反应，对栈block进行copy则会被拷贝到堆上，对堆block进行copy操作则会增加其引用计数。_（那实际上，对栈block进行copy操作时，在堆上也产生了一个一样的block，同时也使栈block的 _ _ forwarding指向了堆区的block，所以此时对栈block进行操作实际就是通过_ _forwarding指针找到对应的堆block，然后再进行操作。同时，在MRC下，对栈block进行copy操作就如同执行了一个malloc方法，所以同样存在内存泄漏的问题。这一段有待商榷，单纯的copy貌似不会产生 _ _ forwarding指针）。
+通过上面的分析，我们知道对全局block进行copy不会有任务反应，对栈block进行copy则会被拷贝到堆上，对堆block进行copy操作则会增加其引用计数。（ 那实际上，对栈block进行copy操作时，在堆上也产生了一个一样的block。同时，在MRC下，对栈block进行copy操作就如同执行了一个malloc方法，所以同样存在内存泄漏的问题。这一段有待商榷，单纯的copy貌似不会产生 _ _ forwarding指针）。
 
 #### 截获变量：
 由block的底层原理可知，block调用就是函数调用。那么block使用外部的变量，就相当于函数使用外部变量。
