--- a/读书笔记/iOS高级笔记/网络请求框架的学习.md
+++ b/读书笔记/iOS高级笔记/网络请求框架的学习.md
@@ -5,16 +5,24 @@ tags: network
 categories: iOS进阶
 description:  从基础的iOS原生网络请求到分析Alamofire源码及使用，然后二次封装Alamofire。来学习iOS完整的网络请求流程与架构搭建思路。
 ---
+
 ### iOS 原生 URLSession
-#### URLSession的使用步骤：
+
+#### 一个正常HTTP/HTTPS网络请求的实际过程 (**重点**)
+* 建立NSURLSessionTask，并且resume；
+* 检查cache策略，如果有需要从本地cache中直接返回数据；
+* 通过DNS进行域名查找；
+* 建立TCP链接；
+* 如果是HTTPS，进行TLS认证；
+* 开始请求；
+* 收到HTTP的response；
+* 接收HTTP的Data。
+
+#### URLSession的简单使用步骤：
 * 1、设置Config（可选）；
-
 * 2、创建Session；
-
 * 3、创建Task；
-
 * 4、resume()，开启Task
-
 * 5、使用delegate或block监听回调（可选）；
 
 #### 解析
@@ -156,22 +164,31 @@ extension ViewController2 : URLSessionDownloadDelegate {
 }
 ```
 
-### Alamofire的使用
+### Alamofire的使用与架构分析
 Alamofire 核心也是在URLSession和URLSessionTask的基础之上进行分装的。使用swift语法进行链式访问。它的设计非常简洁，完整地将网络请求、URL校验、失败重试机制、请求缓存机制、错误机制、响应解析等功能封装在一起。
 #### Alamofire整体框架
 * 线程相关：Protected.swift 
   Protect主要是将不同类型的任务实现了加锁处理，然后这个文件中封装了两种锁（互斥锁和自旋锁），iOS系统使用的是自旋锁。
+
 * 会话：Session.swift、SessionDelegate.swift 
+	* Session是Alamofire的对外接口。它利用组合模式对整个请求过程及回调处理进行管理。具体的工作就包括生成URLSession
   Session主要是生成URLSession，然后用于管理SessionDelegate和Request。
+
 * 请求：Request.swift、RequestTaskMap.swift、RequestInterceptor.swift
-  * Request 是Alamofire请求类型的公共超类。主要包含了状态、委托、回调处理等信息。
+  * Request 是Alamofire请求类型的公共超类，主要包含了状态、委托、回调处理等信息。其子类主要就是DataRequest、UploadRequest、DownloadRequest、StreamRequest；
   * RequestInterceptor是请求拦截器，由RequestAdapter和RequestRetry组成，用于在发送请求之前修改Request和请求失败之后的重试策略。
   * RequestAdapter叫做适配器，用来做请求前和请求之后的适配，比如用来设置一些公关参数、token之类的，然后在request成功或失败时对request进行适配（其实就是修饰一下，把request的一些相关属性设置一下的意思）；
   * RequestRetry用于重试策略；
+
 * 响应：Response.swift、ResponseSerialization.swift
+
 * 验证：URLConvertable+URLRequestConvertible.swift、Validation.swift
+
 * 事件监听：EventMonitor.swift
+
 * 综合：Alamofire.swift、AFError.swift、AlamofireExtended.swift
+
+	* Alomofire.swift就定义了一个AF常量，是Session类型，类似于命名空间的作用；所以请求可以直接使用AF调用，更简洁明了。
 
 #### Alamofire 请求过程和设计思路
 首先看一下Alamofire的入口及解析
