--- a/读书笔记/iOS高级笔记/网络请求框架的学习.md
+++ b/读书笔记/iOS高级笔记/网络请求框架的学习.md
@@ -220,7 +220,7 @@ AF.request(_ convertible: URLConvertible,
 	* DataRequest也分为UploadRequest、DataRequest、DownloadRequest、DataStreamRequest，基本和URLSessionTask的类型对应；
 
 * 调用session.perform，把刚创建的request传进去并返回Request；
-  * perform 会在rootQueue队列中异步执行，然后将request放到一个activeRequests集合中，接着再在requestQueue中执行对应类型的请求操作
+  * perform 会在rootQueue队列中异步执行，然后将request放到一个**activeRequests**集合中，接着再在requestQueue中执行对应类型的请求操作
 	```
 	func perform(_ request: Request) {
         rootQueue.async {
@@ -242,7 +242,13 @@ AF.request(_ convertible: URLConvertible,
 
 ##### 再看一下Alamofire的响应过程
 * 首先请求回调响应成功、失败是不确定。所以响应的最主要的几个系统基础回调就是URLSessionDataDelegate、URLSessionTaskDelegate、URLSessionDownloadDelegate。
-	* 一个数据请求(DataRequest),响应过程会分为两个步骤：
+* 一个数据请求(DataRequest),响应过程会分为两个步骤：
+	* 1、会先调用URLSessionDataDelegate.didRecive代理方法。然后将元数据Data拼接和添加进mutableData中，并计算和更新下载进度;
+	* 2、响应完成后，会调用URLSessionTaskDelegate的didCompleteWithError代理方法。然后通过StateProvider，最终调用Session.didCompleteTask;
+	* 2.1、在Session.didCompleteTask中，将RequestTaskMap存储的request与task清理；
+	* 2.2、接着会在Request.didCompleteTask里调用retryOrFinish，它会根据错误和代理方法来决定是重试还是结束；
+	* 2.3、结束满足的条件就是：**整个请求过程中，没有出现错误或retrier**;
+	* 3、结束请求：处理响应序列，执行回调。从**activeRequests**集合中移除Request，从mutableState移除状态管理等；
 
 https://juejin.im/post/6844904118008430606
 
