整理网络请求封装框架内容

--- a/读书笔记/iOS高级笔记/网络请求框架的学习.md
+++ b/读书笔记/iOS高级笔记/网络请求框架的学习.md
@@ -217,7 +217,8 @@ AF.request(_ convertible: URLConvertible,
                       requestModifier: RequestModifier? = nil) -> DataRequest
 ```
 * 函数内部会根据传入的除了RequestInterceptor之外的所有参数来构建RequestConvertible，这个类型主要作用是持有这些参数并**生成URLRequest**；然后创建具体的DataRequest实例；
-	* DataRequest也分为UploadRequest、DataRequest、DownloadRequest、DataStreamRequest，基本和URLSessionTask的类型对应；
+
+  * DataRequest也分为UploadRequest、DataRequest、DownloadRequest、DataStreamRequest，基本和URLSessionTask的类型对应；
 
 * 调用session.perform，把刚创建的request传进去并返回Request；
   * perform 会在rootQueue队列中异步执行，然后将request放到一个**activeRequests**集合中，接着再在requestQueue中执行对应类型的请求操作
@@ -257,6 +258,59 @@ https://juejin.im/post/6844904118008430606
 * 
 
 
+
+### 对Alamofire的二次封装
+* 不直接使用Alamofire的原因：
+  * Alamofire是一个非常强大的库，但是也导致其使用起来比较繁琐。随处可见的不同的网络请求及相关配置，也使得代码非常混乱，难以维护；
+  * 整个项目的网络请求可能会出现使用Alamofire的API，也可能出现直接使用系统Net相关API，导致网络请求层次结构杂乱；
+  * 直接使用Alamofire，使得多个项目的请求模块无法通用，难以下手；
+  * 无法做单元测试；
+* 封装的目的：
+  * 清晰的网络结构，APP所有的请求都通过封装层访问Alamofire，所有的请求结构都定制成了统一的模板，所有的请求方法都是统一范式的API。
+  * 多个项目直接的通用性，易于移植和管理；
+  * 可以简单地进行网络单元测试；
+
+* 设计思想与实现细节
+  * 使用面向协议编程思想，定制整个网络请求框架。
+  * 根据高内聚、低耦合的原则，使用外观模式定义少数高层接口，尽可能为所有请求提供一个统一的接口。也就是说，使用时直接访问高层接口，而无需访问其他子模块的接口。比如请求只需要调用最上层的Request接口，而无需一步步调用Request和Response的子接口。
+  * 根据组合模式，使用一个结构体Net将整个请求的自定义Request、自定义Response、自定义Error、Session进行组合包装。
+  * 使用组合模式，自定义Response。使其包含有网络原始请求的request、response、statusCode、result等。以方便自定义插件和扩展，比如解析方案、日志打印等；
+  * 根据依赖倒置原则，设置RequestBuilder协议，使得每个Request可以自定义自身的host、path、params、header、method、encoding、cachePolicy、sigenature等信息，也可以默认共用某些共同信息。这样就使得整个库可以通用于不同的项目，使其更加地灵活。
+  * 根据易用性的原则，尽可能地只对Alamofire进行基础功能地封装，使得80%的对外接口都是经常性使用的API；
+  * 根据开闭原则，对自定义插件和扩展开放协议和接口，比如签名、单元测试、模型解析等信息。然后使用泛型定制参数，增加接口的易用性，避免重复修改等问题。
+
+
+### 其他
+
+* 面向对象&面向协议
+  * 面向对象就是将事务抽象成对象的概念，然后给对象赋予属性和方法，让对象去执行自己的方法。它的核心思想就是使用封装、继承将一系列的相关内容放到一起。但是由于事务往往不是一脉相承的，而是由多种特质的组合，所以导致面向对象很多时候没法很好地对事务进行抽象。面向对象存在一定的问题
+
+    * 横切关注点：也就是说如果两个在不同继承关系中的类（没有继承关系）使用了同样的代码（比如都实现了一个method()函数），那么这个代码没法共用。（解决方案可以给它们搞个父类，或者实现多继承等）。
+
+      ```
+      @interface c1: NSObject
+          func method() {}
+      @end
+      @interface c2 : NSObject
+          func method() {}
+      @end
+      ```
+
+    * 菱形缺陷：比如上述问题，我们给两个类施加一个共同的父类（比如c0）,此时又有一个类c3同时继承于c1和c2。那么c3在使用的时候对于使用哪个父类的method方法就会很难确定，导致不安全。这就是菱形缺陷；
+
+    * 动态派发安全性：比如动态类型，动态调用方法，该方法没有实现，就会导致崩溃。比如：
+
+      ```
+      C1 *c1 = ...
+      C2 *c2 = ...
+      NSObject *c3 = ...
+      NSArray * arr = @[c1, c2, c3]
+      for (id obj) in arr {
+          [obj method];
+      }
+      ```
+  * 面向协议就是通过协议来定义事务的实现。通过遵守不同的协议，来对类或结构体进行定制。它只需要实现协议里规定的属性和方法就可以。相对于面向对象，其耦合性更低，维护和扩展更灵活。其次其正好可以解决面向对象的三大缺陷问题。
+      
 
 
 
