完善网络库封装的实现细节

--- a/读书笔记/iOS高级笔记/网络请求框架的学习.md
+++ b/读书笔记/iOS高级笔记/网络请求框架的学习.md
@@ -270,7 +270,7 @@ https://juejin.im/post/6844904118008430606
   * 多个项目直接的通用性，易于移植和管理；
   * 可以简单地进行网络单元测试；
 
-* 设计思想与实现细节
+* 设计思想
   * 使用面向协议编程思想，定制整个网络请求框架。
   * 根据高内聚、低耦合的原则，使用外观模式定义少数高层接口，尽可能为所有请求提供一个统一的接口。也就是说，使用时直接访问高层接口，而无需访问其他子模块的接口。比如请求只需要调用最上层的Request接口，而无需一步步调用Request和Response的子接口。
   * 根据组合模式，使用一个结构体Net将整个请求的自定义Request、自定义Response、自定义Error、Session进行组合包装。
@@ -278,6 +278,12 @@ https://juejin.im/post/6844904118008430606
   * 根据依赖倒置原则，设置RequestBuilder协议，使得每个Request可以自定义自身的host、path、params、header、method、encoding、cachePolicy、sigenature等信息，也可以默认共用某些共同信息。这样就使得整个库可以通用于不同的项目，使其更加地灵活。
   * 根据易用性的原则，尽可能地只对Alamofire进行基础功能地封装，使得80%的对外接口都是经常性使用的API；
   * 根据开闭原则，对自定义插件和扩展开放协议和接口，比如签名、单元测试、模型解析等信息。然后使用泛型定制参数，增加接口的易用性，避免重复修改等问题。
+
+* 实现细节
+	* 使用结构体Net封装一个统一入口request(_ builder: NetRequestBuilder) -> Request {...} ，传入的参数是一个实现了NetRequestBuilder协议的实例，返回一个自定义的Request。
+	* NetRequestBuilder就是一个协议，协议定义了Request可自定义的各种信息，比如host、params、url、encoding等。然后它也提供了生成和封装Request的私有接口，可以根据是否实现了相关协议来反复包装Request，比如signature、encodingType等。
+	* 然后自定义的Request持有了Net自定义的Response，所以返回Request可以实现链式编程的效果。其次Response包含了原始的URLRequest、HTTPResponse、Status、Result等，编译对响应数据进行操作，比如modol解析，日志打印，错误处理等。
+	* 然后Net封装了Adapt私有接口和retry私有接口，对Request的进行适配以及定制重试策略。
 
 
 ### 其他
@@ -310,7 +316,7 @@ https://juejin.im/post/6844904118008430606
       }
       ```
   * 面向协议就是通过协议来定义事务的实现。通过遵守不同的协议，来对类或结构体进行定制。它只需要实现协议里规定的属性和方法就可以。相对于面向对象，其耦合性更低，维护和扩展更灵活。其次其正好可以解决面向对象的三大缺陷问题。
-      
+    
 
 
 
