晚上网络库封装

--- a/读书笔记/iOS高级笔记/网络请求框架的学习.md
+++ b/读书笔记/iOS高级笔记/网络请求框架的学习.md
@@ -251,8 +251,6 @@ AF.request(_ convertible: URLConvertible,
 	* 2.3、结束满足的条件就是：**整个请求过程中，没有出现错误或retrier**;
 	* 3、结束请求：处理响应序列，执行回调。从**activeRequests**集合中移除Request，从mutableState移除状态管理等；
 
-https://juejin.im/post/6844904118008430606
-
 ##### 设计思路
 * 易用性。根据二八原则，对于一个框架的使用80%的时候都是很基础的功能使用，且这些使用非常容易，则我们认为这个框架是易用的。
 * 
@@ -276,14 +274,15 @@ https://juejin.im/post/6844904118008430606
   * 根据组合模式，使用一个结构体Net将整个请求的自定义Request、自定义Response、自定义Error、Session进行组合包装。
   * 使用组合模式，自定义Response。使其包含有网络原始请求的request、response、statusCode、result等。以方便自定义插件和扩展，比如解析方案、日志打印等；
   * 根据依赖倒置原则，设置RequestBuilder协议，使得每个Request可以自定义自身的host、path、params、header、method、encoding、cachePolicy、sigenature等信息，也可以默认共用某些共同信息。这样就使得整个库可以通用于不同的项目，使其更加地灵活。
-  * 根据易用性的原则，尽可能地只对Alamofire进行基础功能地封装，使得80%的对外接口都是经常性使用的API；
+  * 根据易用性的二八原则，尽可能地只对Alamofire进行基础功能地封装，使得80%的对外接口都是经常性使用的API；
   * 根据开闭原则，对自定义插件和扩展开放协议和接口，比如签名、单元测试、模型解析等信息。然后使用泛型定制参数，增加接口的易用性，避免重复修改等问题。
 
 * 实现细节
-	* 使用结构体Net封装一个统一入口request(_ builder: NetRequestBuilder) -> Request {...} ，传入的参数是一个实现了NetRequestBuilder协议的实例，返回一个自定义的Request。
-	* NetRequestBuilder就是一个协议，协议定义了Request可自定义的各种信息，比如host、params、url、encoding等。然后它也提供了生成和封装Request的私有接口，可以根据是否实现了相关协议来反复包装Request，比如signature、encodingType等。
-	* 然后自定义的Request持有了Net自定义的Response，所以返回Request可以实现链式编程的效果。其次Response包含了原始的URLRequest、HTTPResponse、Status、Result等，编译对响应数据进行操作，比如modol解析，日志打印，错误处理等。
-	* 然后Net封装了Adapt私有接口和retry私有接口，对Request的进行适配以及定制重试策略。
+  * 使用结构体Net封装一个统一入口request(_ builder: NetRequestBuilder) -> Request {...} ，传入的参数是一个实现了NetRequestBuilder协议的实例，返回一个自定义的Request。
+  * NetRequestBuilder就是一个协议，协议定义了Request可自定义的各种信息，比如host、params、url、encoding等。然后它也提供了生成和封装Request的私有接口，可以根据是否实现了相关协议来反复包装Request，比如signature、encodingType等。Request最终是转成了URLRequest传给了Alamofire。
+  * 然后自定义的Request持有了Net自定义的Response，所以返回Request可以实现链式编程的效果。其次Response包含了原始的URLRequest、HTTPResponse、Status、Result等，便于对响应数据进行操作，比如modol解析，日志打印，错误处理等。
+  * 其次Net封装了Adapt私有接口和retry私有接口，对Request的进行适配以及定制重试策略。
+  * 对于签名方式，有订制一个签名协议，然后库里有比较通用的AES对称加密的签名方式。如果需要自定义算法签名可以使用协议订制，然后在NetRequestBuilder实现的时候传递进去。
 
 
 ### 其他
@@ -317,7 +316,6 @@ https://juejin.im/post/6844904118008430606
       ```
   * 面向协议就是通过协议来定义事务的实现。通过遵守不同的协议，来对类或结构体进行定制。它只需要实现协议里规定的属性和方法就可以。相对于面向对象，其耦合性更低，维护和扩展更灵活。其次其正好可以解决面向对象的三大缺陷问题。
     
-
 
 
 
