--- a/读书笔记/程序员的自我修养——连接、装载、库/《程序员的自我修养》之操作系统、内存、线程.md
+++ b/读书笔记/程序员的自我修养——连接、装载、库/《程序员的自我修养》之操作系统、内存、线程.md
@@ -20,7 +20,7 @@ description:  希望自己像讲故事一样学习。（所有内容观点截止
 #### 操作系统的工作
 操作系统的一个主要功能是提供抽象接口，另一个主要功能就是管理硬件资源。
 * 让CPU不用打盹
-早期操作系统使用时间片轮训的**分时系统**来处理任务，但是分时系统无法解决一个程序强占CPU的情况。所以就出现了**多任务系统**，多任务系统中，每个应用程序都是以**进程**的方式运行在比操作系统权限更低的级别，每个进程都有自己的独立地址空间。CPU也由操作系统根据进程的优先级来统一分配，运行操过了一段时间，操作系统就会暂停进程。
+早期操作系统使用时间片轮训的**分时系统**来处理任务，但是分时系统无法解决一个程序强占CPU的情况。所以就出现了**多任务系统**，多任务系统中，**每个应用程序都是以进程的方式运行在比操作系统权限更低的级别，每个进程都有自己的独立地址空间。CPU也由操作系统根据进程的优先级来统一分配，运行操过了一段时间，操作系统就会暂停进程。**
 * 操作系统使用**硬件驱动程序**来管理和使用硬件。
 
 ### 内存
