重新复习，完善细节

--- a/读书笔记/iOS高级笔记/卡顿与崩溃专题.md
+++ b/读书笔记/iOS高级笔记/卡顿与崩溃专题.md
@@ -723,9 +723,9 @@ APP启动主要分为三个阶段：main函数之前、main函数之后、首屏
   主要工作：加载可执行文件；加载动态链接库；运行时处理(包括类的注册、category注册、selector唯一性检测等)；初始化(+load方法、创建c++静态全局变量)。
   所以可以做的事情就包括：
 
-  - 减少动态库的加载，苹果公司建议使用更大的动态库，可以考虑将多个库进行合并，数量上建议是6个非系统动态库；
-  - 删减无用的代码和类；
-  - +load方法尽量少用，或者将里面的内容挪到其他地方，比如+initialize()；控制c++全局变量的数量；
+  - 减少动态库的数量，苹果公司建议使用更大的动态库，可以考虑将多个库进行合并，数量上建议是6个非系统动态库；
+  - 减少OC的类的数量，例如合并或删除，这样可以加快动态链接、重定位/绑定所耗费的时间会减少；
+  - +load方法尽量少用，或者将里面的内容挪到+initialize()中，尽量延后初始化；
 
 - main函数之后：
 
@@ -737,7 +737,22 @@ APP启动主要分为三个阶段：main函数之前、main函数之后、首屏
 - 首屏渲染完成：
   这个阶段就是从首屏渲染到didFinishLaunchingWiithOptions方法作用域结束为止。这个阶段用户已经能看到首屏数据了，所以要注意的就是主线程卡顿相关的问题。
 
-##### 启动耗时检测：略
+##### 启动耗时检测：
+
+对于**main函数**之前的启动耗时日志，具体方法是在xcode中添加DYLD_PRINT_STATISTICS环境变量，并将其设置为1，这样就可以得到以下启动日志：
+
+```
+Total pre-main time: 1.3 seconds(100.0%)
+	dylib loading time: 107.45 milliseconds (8.0%)
+	rebase/binding time: 376.56 milliseconds (28.2%)
+	ObjC setup time: 166.96 milliseconds (12.5%)
+	initializer time: 684.01 milliseconds (51.2%)
+	slowest initalizers:
+		libSystem.dylib: 297.56 milliseconds (22.2%)
+		libMainThreadCheck.dylib: 33.00 milliseconds (2.4%)
+		libLLVMContainer.dylib: 113.09 milliseconds (8.4%)
+		ModelIO: 189.45 milliseconds (14.1%)
+```
 
 
 
